defines build and port for client page

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "MyMedicareBot Coding Challenge",
   "main": "index.js",
   "scripts": {
+    "build:dev": "webpack -w --config ./client/webpack.prod.config.js --mode=development",
+    "client:dev": "nodemon ./client/index.js",
     "test": "test"
   },
   "repository": {
