--- a/package.json
+++ b/package.json
@@ -1,47 +1,38 @@
 {
-  "name": "mmb_david_chung",
+  "name": "dchungwebsite",
   "version": "1.0.0",
-  "description": "MyMedicareBot Coding Challenge",
-  "main": "index.js",
+  "description": "doing website stuff",
+  "main": "5000",
   "scripts": {
-    "build:dev": "webpack -w --config ./client/webpack.prod.config.js --mode=development",
-    "client:dev": "nodemon ./client/index.js",
-    "test": "test"
+    "build:dev": "webpack -w --mode=development",
+    "start:dev": "nodemon index.js",
+    "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/l1fb/MMBCodeChallenge.git"
-  },
-  "author": "David Yonwook Chung",
+  "author": "David Chung",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/l1fb/MMBCodeChallenge/issues"
-  },
-  "homepage": "https://github.com/l1fb/MMBCodeChallenge#readme",
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.17.5",
     "path": "^0.12.7",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "sass": "^1.13.0"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "sass": "^1.8.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
-    "mini-css-extract-plugin": "^0.4.2",
+    "css-loader": "^0.28.11",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.3",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0"
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8"
   }
 }
