moves the client-side files to the client_side folder for server_side folder in the future

--- a/client_side/package.json
+++ b/client_side/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dchungwebsite",
+  "name": "David Yonwook Chung",
   "version": "1.0.0",
-  "description": "doing website stuff",
+  "description": "MMB Coding Challenge | David Chung",
   "main": "5000",
   "scripts": {
     "build:dev": "webpack -w --mode=development",
