sets up structures for express router

--- a/client_side/package.json
+++ b/client_side/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "David Yonwook Chung",
+  "name": "mmb_coding_challenge_client_side",
   "version": "1.0.0",
   "description": "MMB Coding Challenge | David Chung",
   "main": "5000",
