--- a/api_side/package.json
+++ b/api_side/package.json
@@ -4,7 +4,7 @@
   "description": "MMB Code Challenge by David Chung",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon index.js" 
   },
   "author": "David Yonwook Chung",
   "license": "ISC",
