--- a/api_side/package.json
+++ b/api_side/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "url": "^0.11.0"
   }
 }
