fixes the README and set up new commands for the packages

--- a/api_side/package.json
+++ b/api_side/package.json
@@ -4,7 +4,8 @@
   "description": "MMB Code Challenge by David Chung",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon index.js"
+    "start:dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "David Yonwook Chung",
   "license": "ISC",
