--- a/client_side/package.json
+++ b/client_side/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build:dev": "webpack -w --mode=development",
     "start:dev": "nodemon index.js",
+    "build": "webpack --mode=development",
     "start": "webpack --mode=development && node index.js"
   },
   "author": "David Chung",
